# livekit-monitor

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: publish.yml
examples/: README.md  docker-compose.yml  egress.yaml  ingress.yaml  livekit.yaml
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  card.tsx  table.tsx
frontend/src/lib/: basepath.ts  theme.ts
frontend/src/pages/: EgressPage.tsx  IngressPage.tsx  LiveEventsPage.tsx  OverviewPage.tsx  RoomDetailPage.tsx  RoomsPage.tsx  SessionsPage.tsx  SettingsPage.tsx
src/: config.rs  livekit_client.rs  main.rs  session_store.rs
src/api/: egress.rs  ingress.rs  mod.rs  overview.rs  rooms.rs  sessions.rs  settings.rs  webhook.rs
