[package]
name = "livekit-monitor"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
livekit-api = { version = "0.4", features = ["native-tls"] }
livekit-protocol = "0.7"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-stream = { version = "0.1", features = ["sync"] }
include_dir = "0.7"
